<resources>
    <string name="app_name">Invisible Gallery</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="add_file_error">Add some files!</string>
    <string name="no_camera_error">Cannot open camera. Is camera app installed?</string>
    <string name="duplicate_error">Filename already exists. Override?</string>

    <string name="setup_title">Do you want to setup a lock?</string>
    <string name="auth_required_title">Authentication Required</string>
    <string name="fingerprint_disabled_warning">Fingerprint authentication is disabled.</string>
    <string name="skip_auth_register">No, I\'ll pass.</string>
    <string name="new_password">New Passcode</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_rename">Rename</string>
    <string name="confirm_delete">Delete image?</string>
    <string name="alert_rename">Rename to...</string>
</resources>
